objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fachrichtung__c</fullName>
        <label>Fachrichtung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pflege_Berufe__c</fullName>
        <label>Pflege-Berufe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zusatzbezeichnung__c</fullName>
        <label>Zusatzbezeichnung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifikationsstufe__c</fullName>
        <label>Qualifikationsstufe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Qualifikationsstufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pflege_Weiterbildungen__c</fullName>
        <label>Pflege-Weiterbildungen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pflege_Praktische_Erfahrungen__c</fullName>
        <label>Pflege-Praktische Erfahrungen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Praktische_Erfahrungen</valueSetName>
        </valueSet>
    </fields>
</CustomObject>